# timballisto

./: .gitignore  .travis.yml  2.2_gpio_conect.py  README.md  auth.py  download_stuff.py  local_setup.sh  pytest.ini  requirements.txt  secret.json  travis.yml
abstract/: README.md  abstract_01.py  abstract_03.py  abstract_04.py  abstract_05.py  abstract_06.py
adaptor/: adaptor_01.py
composition/: README.md  door_01.py  door_03.py  door_04.py  door_06.py  untitled
core_electronics/: 2.1_python_intro.py  2.3_pretty_sine.py  2.4_breathing_led.py  3.1_shell_script.sh  3.2_bash_variables.sh  3.3_archive_stuff.sh  3.4_time_archive.sh  README.md
dash_button/: README.md  listen.py
decorators/: class.py  classmethod.py  decorator.py  decorator_02.py  decorator_03.py  decorators_test.py  memoisation.py  property.py  setter.py  static.py  static_counter.py  staticmethod.py  staticmethod_counter.py
design_patterns/: oop.md
docs/: DS18B20.md  GPIO.md  HC-SR04.md  I2C.md  MAX98357.md  MCP3008.md  PIR.md  README.md  advanced_config.md  antennas.md  backup.md  do_first.md  do_next.md  docker.md  github_setup.md  gpio.md  i2c.md  kali_linux.md  mcp3008.md  mqtt.md  node_js.md  pi-hole.md  pi-nas.md  pihole.md  restore_image.md  rtl_sdr.md  scheduling.md  sd_cards.md  spi_lcd.md  st7735.md  terminal_commands.md  zsh.md
google/: README.md  auth.py  spreadsheet.py
gui/: 01_gui_test.py
inheritance/: inheritance_1.py  inheritance_2.py
magic/: README.md  currency.py  magic_call.py  (+1 more)
src/mergepdf/: README.md  pyproject.toml
src/mergepdf/src/mergepdf/: merge.py  setmeta.py
(+214 files in other folders)
